--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -4412,6 +4412,8 @@
 			<false/>
 			<key>Idle Code</key>
 			<integer>0</integer>
+			<key>Initial Text</key>
+			<string>source ~/.zshrc; clear</string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
