--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -3868,17 +3868,6 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
-		<key>0x4c-0x120000-0x25</key>
-		<dict>
-			<key>Action</key>
-			<integer>29</integer>
-			<key>Label</key>
-			<string></string>
-			<key>Text</key>
-			<string>AB05ADD0-38FA-4363-80E6-939AB9E8AF30</string>
-			<key>Version</key>
-			<integer>1</integer>
-		</dict>
 		<key>0x54-0x120000-0x11</key>
 		<dict>
 			<key>Action</key>
@@ -3887,6 +3876,17 @@
 			<string></string>
 			<key>Text</key>
 			<string></string>
+			<key>Version</key>
+			<integer>1</integer>
+		</dict>
+		<key>0x56-0x60000-0x9</key>
+		<dict>
+			<key>Action</key>
+			<integer>29</integer>
+			<key>Label</key>
+			<string></string>
+			<key>Text</key>
+			<string>AB05ADD0-38FA-4363-80E6-939AB9E8AF30</string>
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
@@ -4718,7 +4718,7 @@
 				<real>0.24144099652767181</real>
 			</dict>
 			<key>Minimum Contrast</key>
-			<real>0.18966833566654626</real>
+			<real>0.19966833566654626</real>
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
@@ -4728,7 +4728,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>HackNerdFontComplete-Regular 14</string>
+			<string>DroidSansMonoNerdFontComplete-Regular 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
