--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -3850,13 +3850,6 @@
 	<true/>
 	<key>GlobalKeyMap</key>
 	<dict>
-		<key>0x19-0x60000</key>
-		<dict>
-			<key>Action</key>
-			<integer>39</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
 		<key>0x48-0x60000-0x4</key>
 		<dict>
 			<key>Action</key>
@@ -3865,17 +3858,6 @@
 			<string></string>
 			<key>Text</key>
 			<string>AB05ADD0-38FA-4363-80E6-939AB9E8AF30</string>
-			<key>Version</key>
-			<integer>1</integer>
-		</dict>
-		<key>0x54-0x120000-0x11</key>
-		<dict>
-			<key>Action</key>
-			<integer>61</integer>
-			<key>Label</key>
-			<string></string>
-			<key>Text</key>
-			<string></string>
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
@@ -3890,19 +3872,16 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
-		<key>0x9-0x40000</key>
+		<key>0x74-0x100000-0x11</key>
 		<dict>
 			<key>Action</key>
-			<integer>32</integer>
-			<key>Text</key>
+			<integer>27</integer>
+			<key>Label</key>
 			<string></string>
-		</dict>
-		<key>0xf700-0x300000</key>
-		<dict>
-			<key>Action</key>
-			<integer>7</integer>
 			<key>Text</key>
-			<string></string>
+			<string>AB05ADD0-38FA-4363-80E6-939AB9E8AF30</string>
+			<key>Version</key>
+			<integer>1</integer>
 		</dict>
 		<key>0xf700-0x320000-0x7e</key>
 		<dict>
@@ -3915,13 +3894,6 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
-		<key>0xf701-0x300000</key>
-		<dict>
-			<key>Action</key>
-			<integer>6</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
 		<key>0xf701-0x320000-0x7d</key>
 		<dict>
 			<key>Action</key>
@@ -3932,13 +3904,6 @@
 			<string></string>
 			<key>Version</key>
 			<integer>1</integer>
-		</dict>
-		<key>0xf702-0x300000</key>
-		<dict>
-			<key>Action</key>
-			<integer>2</integer>
-			<key>Text</key>
-			<string></string>
 		</dict>
 		<key>0xf702-0x320000-0x7b</key>
 		<dict>
@@ -3951,13 +3916,6 @@
 			<key>Version</key>
 			<integer>1</integer>
 		</dict>
-		<key>0xf703-0x300000</key>
-		<dict>
-			<key>Action</key>
-			<integer>0</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
 		<key>0xf703-0x320000-0x7c</key>
 		<dict>
 			<key>Action</key>
@@ -3968,48 +3926,6 @@
 			<string></string>
 			<key>Version</key>
 			<integer>1</integer>
-		</dict>
-		<key>0xf729-0x100000</key>
-		<dict>
-			<key>Action</key>
-			<integer>5</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
-		<key>0xf72b-0x100000</key>
-		<dict>
-			<key>Action</key>
-			<integer>4</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
-		<key>0xf72c-0x100000</key>
-		<dict>
-			<key>Action</key>
-			<integer>9</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
-		<key>0xf72c-0x20000</key>
-		<dict>
-			<key>Action</key>
-			<integer>9</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
-		<key>0xf72d-0x100000</key>
-		<dict>
-			<key>Action</key>
-			<integer>8</integer>
-			<key>Text</key>
-			<string></string>
-		</dict>
-		<key>0xf72d-0x20000</key>
-		<dict>
-			<key>Action</key>
-			<integer>8</integer>
-			<key>Text</key>
-			<string></string>
 		</dict>
 	</dict>
 	<key>HapticFeedbackForEsc</key>
@@ -4026,8 +3942,6 @@
 	<true/>
 	<key>HotkeyModifiers</key>
 	<integer>524288</integer>
-	<key>IRMemory</key>
-	<integer>4</integer>
 	<key>NeverWarnAboutPossibleOverrides</key>
 	<true/>
 	<key>NeverWarnAboutPossibleOverrides_selection</key>
@@ -4720,7 +4634,7 @@
 				<real>0.24144099652767181</real>
 			</dict>
 			<key>Minimum Contrast</key>
-			<real>0.19966833566654626</real>
+			<real>0.18966833566654626</real>
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
@@ -4730,7 +4644,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>DroidSansMonoNerdFontComplete-Regular 12</string>
+			<string>HackNerdFontComplete-Regular 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
