--- a/ghostty/ghostty.conf
+++ b/ghostty/ghostty.conf
@@ -1,6 +1,11 @@
 shell-integration = zsh
 
 font-family = "Hack Nerd Font Mono Regular"
+font-size = 12
+font-feature = -calt
+font-feature = -liga
+font-feature = -dlig
+
 theme = poimandres.ghostty
 background-opacity = 0.8
 
