--- a/sheldon/plugins.toml
+++ b/sheldon/plugins.toml
@@ -18,3 +18,9 @@ apply = ["defer"]
 github = "wting/autojump"
 dir = "bin"
 apply = ["PATH", "source"]
+
+[plugins.zsh-autosuggestions]
+github = "zsh-users/zsh-autosuggestions"
+
+[plugins.zsh-history-substring-search]
+github = "zsh-users/zsh-history-substring-search"
